fix layout shift on main and paper pages

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -638,9 +638,11 @@ body {
 
     &__img {
         max-width: 100%;
+        height: auto;
     }
 
     &__img-mobile {
+        width: 80px;
         height: 60px;
         position: absolute;
     }
@@ -713,7 +715,9 @@ body {
     }
 
     &__img {
-        max-width: 100%;
+        // max-width: 100%;
+        width: 100%;
+        height: auto;
     }
 
     &__text {
@@ -1775,4 +1779,3 @@ body {
         background-image: url("../src/assets/arrow-dd.svg");
     }
 }
-
